crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__emoji_statement.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/emoji_statement.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..5,
        body: Suite {
            range: 0..5,
            node_index: NodeIndex(None),
            statements: [],
        },
    },
)
```
## Errors

  |
1 | 👍
  | ^^ Syntax Error: Got unexpected token 👍
  |
